Significant code reformatting, added lipidized filename to cc class