@@ -3,6 +3,7 @@ import java.net.*;
 import java.util.Arrays;
 import java.util.Vector;
 import java.io.*;
+
 public class SocketThread extends Thread {
   static Socket csocket;
 
@@ -19,6 +20,7 @@ public class SocketThread extends Thread {
   }
 
   public static void saveUrl(final String filename, final String urlString)throws MalformedURLException, IOException {
+
     BufferedInputStream in = null;
     FileOutputStream fout = null;
     try {
@@ -28,19 +30,19 @@ public class SocketThread extends Thread {
       final byte data[] = new byte[1024];
       int count;
       while ((count = in.read(data, 0, 1024)) != -1) {
-        fout.write(data, 0, count);
+	fout.write(data, 0, count);
       }
+
     } catch(Exception e) {
       PrintStream pstream = new PrintStream(csocket.getOutputStream());
       pstream.println(filename+" doesn't found");
       pstream.close();
-    }
-    finally{
+    } finally {
       if (in != null) {
-        in.close();
+	in.close();
       }
       if (fout != null) {
-        fout.close();
+	fout.close();
       }
     }
   }
@@ -53,125 +55,112 @@ public class SocketThread extends Thread {
       PrintStream pstream = new PrintStream(csocket.getOutputStream());
       Vector<String> Args = new Vector<String>();
       while (!(inputLine = in.readLine()).equals("exit") ) {
-        //System.out.println(inputLine);
-        Args.addElement(inputLine);
+	//System.out.println(inputLine);
+	Args.addElement(inputLine);
       }
       //System.out.println("bra");
       String arr[];
-      if(Args.elementAt(7).contains(", "))
-      {
-        arr = (Args.elementAt(7)).split(", ");
-      }
-      else
-      {
-        if(Args.elementAt(7).contains(","))
-        {
-          arr = (Args.elementAt(7)).split(",");
-        }
-        else
-        {
-          if(Args.elementAt(7).contains(" "))
-            arr = (Args.elementAt(7)).split(" ");
-          else 
-            arr = (Args.elementAt(7)).split("(?<=\\G.{4})");
-        }
+      if(Args.elementAt(7).contains(", ")) {
+	arr = (Args.elementAt(7)).split(", ");
+      } else {
+	if(Args.elementAt(7).contains(",")) {
+	  arr = (Args.elementAt(7)).split(",");
+	} else {
+	  if(Args.elementAt(7).contains(" "))
+	    arr = (Args.elementAt(7)).split(" ");
+	  else 
+	    arr = (Args.elementAt(7)).split("(?<=\\G.{4})");
+	}
       }
       Vector<String> namesOfProteins= new Vector<String>(Arrays.asList(arr));
-      for(int i=0;i<arr.length;i++)
-      {
-        if(!(checkExists("Javaserver",arr[i]+".pdb"))&&(arr[i].compareTo("")!=0))
-        {
-          saveUrl(arr[i]+".pdb", "http://opm.phar.umich.edu/pdb/"+arr[i]+".pdb");
-          if(!checkExists("Javaserver",arr[i]+".pdb"))
-          {
-            in.close();
-            pstream.close();
-            csocket.close();
-            return;
-          }
-        }
-        else
-          System.out.println(arr[i]+" is exists");
+      for(int i=0;i<arr.length;i++) {
+	if(!(checkExists("Javaserver",arr[i]+".pdb"))&&(arr[i].compareTo("")!=0)) {
+	  saveUrl(arr[i]+".pdb", "http://opm.phar.umich.edu/pdb/"+arr[i]+".pdb");
+	  if(!checkExists("Javaserver",arr[i]+".pdb")) {
+	    in.close();
+	    pstream.close();
+	    csocket.close();
+	    return;
+	  }
+	} else
+	  System.out.println(arr[i]+" exists");
       }
       String arr2[]=(Args.elementAt(6).replaceAll("MB", "")).split(" ");
       for(int i=0;i<arr2.length;i++)
-        arr2[i]=(arr2[i].substring(0, arr2[i].indexOf('.')));
+	arr2[i]=(arr2[i].substring(0, arr2[i].indexOf('.')));
       namesOfProteins.addAll(Arrays.asList(arr2));
       for(int i=0;i<namesOfProteins.size();i++)
-        System.out.println(namesOfProteins.elementAt(i));
+	System.out.println(namesOfProteins.elementAt(i));
       Circumcircle crm = null;
-      if(Args.elementAt(4).equals("circular"))
-      {
-        if(Args.elementAt(5).equals("dummy"))
-        {
-          try{
-            //                          radius             thickness          angle              email
-            crm = new Circumcircle(Args.elementAt(0),Args.elementAt(1),Args.elementAt(2),Args.elementAt(3),namesOfProteins.size(),namesOfProteins);
-            crm.determine2d();
-            crm.drawMembrane(2);
-          }catch(Exception e)
-          {
-            pstream.println("something went wrong! Try again");
-          }
-        }else
-        {
-          try{
-            crm = new Circumcircle(Args.elementAt(0),
-                Args.elementAt(1),
-                Args.elementAt(2),
-                Args.elementAt(3),
-                namesOfProteins.size(),
-                namesOfProteins,
-                Args.elementAt(8));
-            crm.determine2d();
-            crm.drawMembrane(8);
+      if(Args.elementAt(4).equals("circular")) {
+	if(Args.elementAt(5).equals("dummy")) {
+	  try {
+	    //                          radius             thickness          angle              email
+	    crm = new Circumcircle(Args.elementAt(0),
+		Args.elementAt(1),
+		Args.elementAt(2),
+		Args.elementAt(3),
+		namesOfProteins.size(),
+		namesOfProteins);
+	    crm.determine2d();
+	    crm.drawMembrane(2);
+	  } catch(Exception e) {
+	    pstream.println("something went wrong! Try again");
+	  }
+	} else {
+	  try {
+	    crm = new Circumcircle(Args.elementAt(0),
+		Args.elementAt(1),
+		Args.elementAt(2),
+		Args.elementAt(3),
+		namesOfProteins.size(),
+		namesOfProteins,
+		Args.elementAt(8));
 
-            //Run script. Calls bash sanitization script 
-            String[] cmd = {
-              "/bin/bash",
-             // "/opt/anaconda2/bin/python lipidize.py '"+crm.filename+"'"
-              "run_lipidize.sh '"+crm.filename+"'"
-            };
-            Runtime.getRuntime().exec(cmd);
-          }catch(Exception e)
-          {
-            pstream.println(e.getMessage());
-            pstream.println("something went wrong! Try again");
-          }
-        }
+	    crm.determine2d();
+	    crm.drawMembrane(8);
+	    Process p = new ProcessBuilder("/bin/bash", "run_lipidize.sh", crm.filename).start();
+	    p.waitFor(); 
+	  } catch(Exception e) {
+	    pstream.println(e.getMessage());
+	    pstream.println("something went wrong! Try again");
+	  }
+	}
+      } else {
+	if(Args.elementAt(5).equals("dummy")) {
+	  try {
+	    //                           radius             thickness          angle              email
+	    crm = new Circumcircle(Args.elementAt(0),
+		Args.elementAt(1),
+		Args.elementAt(2),
+		Args.elementAt(3),
+		namesOfProteins.size(),
+		namesOfProteins);
+
+	    crm.determine3d();
+	    crm.draw3DMembrane();
+	  } catch(Exception e) {
+	    pstream.println("something went wrong! Try again");
+	  }
+	} else {
+	  try {
+	    crm = new Circumcircle(Args.elementAt(0),
+		Args.elementAt(1),
+		Args.elementAt(2),
+		Args.elementAt(3),
+		namesOfProteins.size(),
+		namesOfProteins,Args.elementAt(8));
+
+	    crm.determine3d();
+	    crm.draw3DMembrane();
+	    Process p = new ProcessBuilder("/bin/bash", "run_lipidize.sh", crm.filename).start();
+	    p.waitFor(); 
+	  } catch(Exception e) {
+	    pstream.println("something went wrong! Try again");
+	  }
+	}
       }
-      else
-      {
-        if(Args.elementAt(5).equals("dummy"))
-        {
-          try{
-            //                           radius             thickness          angle              email
-            crm = new Circumcircle(Args.elementAt(0),Args.elementAt(1),Args.elementAt(2),Args.elementAt(3),namesOfProteins.size(),namesOfProteins);
-            crm.determine3d();
-            crm.draw3DMembrane();
-          }catch(Exception e)
-          {
-            pstream.println("something went wrong! Try again");
-          }
-        }else
-        {
-          try{
-            crm = new Circumcircle(Args.elementAt(0),Args.elementAt(1),Args.elementAt(2),Args.elementAt(3),namesOfProteins.size(),namesOfProteins,Args.elementAt(8));
-            crm.determine3d();
-            crm.draw3DMembrane();
-            //Run script
-            String[] cmd = {
-              "/bin/bash",
-              "/opt/anaconda2/bin/python lipidize.py '"+crm.filename +"'"
-            };
-            Runtime.getRuntime().exec(cmd);
-          }catch(Exception e)
-          {
-            pstream.println("something went wrong! Try again");
-          }
-        }
-      }
-      System.out.println("finish!");
+      System.out.println("Finished!");
       pstream.println("<br> The PDB file of your proteins in a circular membrane:"); 
       pstream.println("\n <a href='"+crm.filename+"'>link</a>");
 
